# para_2025_president

./: .gitignore  main.py  pyproject.toml
